--- a/styles/atom-python-shell.less
+++ b/styles/atom-python-shell.less
@@ -4,5 +4,10 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
+
 .atom-python-shell {
+  @import (less) '../node_modules/xterm/dist/xterm.css';
+  .term{
+    height: 200px;
+  }
 }
